--- a/sample.cfg
+++ b/sample.cfg
@@ -4,5 +4,7 @@ consumer_secret:
 access_token:
 access_token_secret:
 
-[file]
-prefix:'trending-topics.csv'
+[files]
+all_topics: trending-topics-02-02-2016.csv
+filtered_topics: trending-topics-17-02-02-2016.csv
+filter_term: 17
