add email config, change filename prefix

--- a/sample.cfg
+++ b/sample.cfg
@@ -5,6 +5,10 @@ access_token:
 access_token_secret:
 
 [files]
-all_topics: trending-topics-02-02-2016.csv
-filtered_topics: trending-topics-17-02-02-2016.csv
+prefix:trending-topics
 filter_term: 17
+
+[email]
+from:XXXX@gmail.com
+pass:
+to:YYYY@gmail.com
