--- a/environment.yml
+++ b/environment.yml
@@ -10,3 +10,10 @@ dependencies:
 - wheel=0.29.0=py35_0
 - xz=5.2.2=0
 - zlib=1.2.8=3
+- pip:
+  - keyring==10.2
+  - oauthlib==2.0.1
+  - requests==2.13.0
+  - requests-oauthlib==0.7.0
+  - twitterapi==2.4.3
+  - yagmail==0.5.156
