add wordpress libraries

--- a/environment.yml
+++ b/environment.yml
@@ -13,7 +13,9 @@ dependencies:
 - pip:
   - keyring==10.2
   - oauthlib==2.0.1
+  - python-wordpress-xmlrpc==2.3
   - requests==2.13.0
   - requests-oauthlib==0.7.0
   - twitterapi==2.4.3
   - yagmail==0.5.156
+
