remove email addresses

--- a/sample.cfg
+++ b/sample.cfg
@@ -12,7 +12,7 @@ regions:region-locations.csv
 [email]
 from:XXXX@gmail.com
 pass:
-to:YYYY@gmail.com, marc.smith.email@gmail.com,harald@digitalspacelab.com,wahmed1@sheffield.ac.uk,dianaascher@gmail.com,kara@succinctsocialmedia.com,itaihm@gmail.com,arberceni@connectedaction.net
+to:YYYY@gmail.com
 
 [wordpress]
 url:
