add fields to config

--- a/sample.cfg
+++ b/sample.cfg
@@ -8,6 +8,7 @@ access_token_secret:
 prefix:trending-topics
 filter_term: 17
 regions:region-locations.csv
+trends:twitter-trends-report.csv
 
 [email]
 from:XXXX@gmail.com
@@ -18,3 +19,5 @@ to:YYYY@gmail.com
 url:
 user:
 pass:
+consumer_key:
+consumer_secret:
